--- a/app/src/main/res/layout/fragment_qrcode.xml
+++ b/app/src/main/res/layout/fragment_qrcode.xml
@@ -15,7 +15,7 @@
         android:layout_marginLeft="60dp"
         android:layout_marginEnd="60dp"
         android:layout_marginRight="60dp"
-        android:background="#80C82D"
+        android:background="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/codeView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="向商家支付"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/colorPrimary"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/codeTipView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -176,7 +176,7 @@
         android:layout_width="190dp"
         android:layout_height="190dp"
         android:layout_marginTop="16dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/colorPrimary"
         android:src="@drawable/qr_code1"
         app:layout_constraintEnd_toEndOf="@+id/codeView"
         app:layout_constraintStart_toStartOf="@+id/codeView"
