--- a/app/src/main/res/layout/layout_titlebar.xml
+++ b/app/src/main/res/layout/layout_titlebar.xml
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|right"
-        android:background="@color/colorPrimary"
+        android:background="#FFFFFF"
         android:paddingRight="10dp"
         android:text="添加"
         android:textColor="@color/black"
