--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -5,7 +5,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="titleTextColor">@color/titleTextColor</item>
+        <item name="titleTextColor">@color/white</item>
         <!--取消状态栏,也就是全屏显示-->
 <!--        <item name="android:windowFullscreen">true</item>-->
     </style>
