--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
     <color name="colorPrimary">#50c03a</color>
     <color name="colorPrimaryDark">#50c03a</color>
     <color name="colorAccent">#1EF028</color>
-    <color name="titleTextColor">#ffffff</color>
+    <color name="white">#ffffff</color>
+    <color name="colorBackground">#ffffdd</color>
     <color name="black">#000000</color>
     <color name="freezeTextColor">#015478</color>
     <color name="red">#ff0000</color>
