rename the plate recognization

--- a/app/src/main/res/layout/fragment_plate.xml
+++ b/app/src/main/res/layout/fragment_plate.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFCC"
-    tools:context=".ui.nfc.NFCFragment">
+    tools:context=".ui.plate.PlateFragment">
 
     <View
     android:id="@+id/NFCTipView"
