--- a/app/src/main/res/navigation/nfc_navigation.xml
+++ b/app/src/main/res/navigation/nfc_navigation.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/navigation_nfc_pay"
-        android:name="com.example.myapplication.ui.nfc.NFCFragment"
+        android:name="com.example.myapplication.ui.plate.PlateFragment"
         android:label="@string/title_nfc"
-        tools:layout="@layout/fragment_nfc" />
+        tools:layout="@layout/fragment_plate" />
 
     <fragment
         android:id="@+id/navigation_qrCode"
