--- a/app/src/main/res/navigation/nfc_navigation.xml
+++ b/app/src/main/res/navigation/nfc_navigation.xml
@@ -13,8 +13,8 @@
 
     <fragment
         android:id="@+id/navigation_qrCode"
-        android:name="com.example.myapplication.ui.qrCode.QRCodeFragment"
+        android:name="com.example.myapplication.ui.camera.CameraFragment"
         android:label="@string/title_nfc"
-        tools:layout="@layout/fragment_qrcode" />
+        tools:layout="@layout/fragment_camera" />
 
 </navigation>
