--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/navigation_qrCode"
-        android:name="com.example.myapplication.ui.qrCode.QRCodeFragment"
+        android:name="com.example.myapplication.ui.camera.CameraFragment"
         android:label="@string/title_qrCode"
-        tools:layout="@layout/fragment_qrcode" />
+        tools:layout="@layout/fragment_camera" />
 
     <fragment
         android:id="@+id/navigation_nfc"
