--- a/app/src/main/res/layout/fragment_plate.xml
+++ b/app/src/main/res/layout/fragment_plate.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="拍照识别"
+        android:text="餐盘识别"
         android:textColor="@color/black"
         android:textSize="50sp"
         app:layout_constraintBottom_toBottomOf="parent"
