--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -4,18 +4,24 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-    <ImageView
-        android:id="@+id/foodPicture"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_margin="5dp"
-        />
-    <TextView
-        android:id="@+id/foodName"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:textSize="20sp"
-        />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/foodPicture"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_margin="5dp"
+            />
+        <TextView
+            android:id="@+id/foodName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:layout_margin="30sp"
+            />
+    </LinearLayout>
     <TextView
         android:id="@+id/description"
         android:layout_width="wrap_content"
