--- a/app/src/main/res/layout/detail_page1_layout.xml
+++ b/app/src/main/res/layout/detail_page1_layout.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="麻婆豆腐"
+        android:text="西红柿炒鸡蛋"
         android:textSize="40sp"
         app:layout_constraintBottom_toTopOf="@+id/cameraPic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,7 +24,7 @@
         android:layout_width="227dp"
         android:layout_height="227dp"
         android:layout_margin="5dp"
-        android:src="@drawable/tofu"
+        android:src="@drawable/tomato"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         android:id="@+id/textView"
         android:layout_width="317dp"
         android:layout_height="190dp"
-        android:text="@string/tofuDescription"
+        android:text="@string/tomatoDescription"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
